Fix Clone Tool when picking from a different layer

More than that, you can pick your source from a
different image opened in Krita even! :)

BUG:347961